Archive2/16/50d7810306540e/output
main.cpp:12:33: warning: parentheses were disambiguated as a function declaration [-Wvexing-parse]
    std::vector< double > vec_e (int (f));
                                ^~~~~~~~~
main.cpp:12:34: note: add a pair of parentheses to declare a variable
    std::vector< double > vec_e (int (f));
                                 ^
                                 (      )
main.cpp:23:5: error: subscript of pointer to function type 'std::vector<double> (int)'
    vec_e[0] = 1.;
    ^~~~~
1 warning and 1 error generated.
